[gd_scene load_steps=3 format=3]

[ext_resource type="Script" path="res://dungeon_game.gd" id="1_game"]
[ext_resource type="Script" path="res://scripts/dungeon_board.gd" id="2_board"]

[node name="DungeonGame" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_game")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.15, 1)

[node name="DungeonBoard" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 80.0
offset_bottom = -100.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_board")

[node name="HUD" type="Control" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2

[node name="HPLabel" type="Label" parent="HUD"]
layout_mode = 0
offset_left = 20.0
offset_top = 10.0
offset_right = 150.0
offset_bottom = 40.0
text = "HP: 10/10"

[node name="GoldLabel" type="Label" parent="HUD"]
layout_mode = 0
offset_left = 160.0
offset_top = 10.0
offset_right = 280.0
offset_bottom = 40.0
text = "Gold: 0"

[node name="AttackLabel" type="Label" parent="HUD"]
layout_mode = 0
offset_left = 20.0
offset_top = 45.0
offset_right = 150.0
offset_bottom = 75.0
text = "ATK: 1"

[node name="FloorLabel" type="Label" parent="HUD"]
layout_mode = 0
offset_left = 160.0
offset_top = 45.0
offset_right = 280.0
offset_bottom = 75.0
text = "Floor: 1"

[node name="QuitGameButton" type="Button" parent="HUD"]
layout_mode = 0
offset_left = 380.0
offset_top = 10.0
offset_right = 460.0
offset_bottom = 40.0
text = "QUIT"

[node name="ExitProgressLabel" type="Label" parent="HUD"]
layout_mode = 0
offset_left = 290.0
offset_top = 45.0
offset_right = 370.0
offset_bottom = 75.0
text = "Exit: 0/15"

[node name="ExitProgressBar" type="ProgressBar" parent="HUD"]
layout_mode = 0
offset_left = 290.0
offset_top = 55.0
offset_right = 460.0
offset_bottom = 75.0
max_value = 15.0
value = 0.0
show_percentage = false

[node name="EquipmentPanel" type="Control" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -90.0
grow_horizontal = 2
grow_vertical = 0

[node name="WeaponLabel" type="Label" parent="EquipmentPanel"]
layout_mode = 0
offset_left = 20.0
offset_top = 10.0
offset_right = 100.0
offset_bottom = 30.0
text = "Weapon:"

[node name="WeaponSlot" type="ColorRect" parent="EquipmentPanel"]
layout_mode = 0
offset_left = 20.0
offset_top = 35.0
offset_right = 70.0
offset_bottom = 85.0
color = Color(0.2, 0.2, 0.2, 1)

[node name="WeaponName" type="Label" parent="EquipmentPanel/WeaponSlot"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = ""
horizontal_alignment = 1
vertical_alignment = 1

[node name="StartPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -100.0
offset_right = 150.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="StartPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Title" type="Label" parent="StartPanel/VBox"]
layout_mode = 2
text = "DUNGEON CARDS"
horizontal_alignment = 1

[node name="Subtitle" type="Label" parent="StartPanel/VBox"]
layout_mode = 2
text = "Click adjacent cards to move
Defeat monsters, collect loot!"
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="StartPanel/VBox"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="StartButton" type="Button" parent="StartPanel/VBox"]
layout_mode = 2
text = "START GAME"

[node name="QuitButton" type="Button" parent="StartPanel/VBox"]
layout_mode = 2
text = "QUIT"

[node name="GameOverPanel" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -80.0
offset_right = 150.0
offset_bottom = 80.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="GameOverPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="GameOverLabel" type="Label" parent="GameOverPanel/VBox"]
layout_mode = 2
text = "GAME OVER"
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="GameOverPanel/VBox"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="RestartButton" type="Button" parent="GameOverPanel/VBox"]
layout_mode = 2
text = "PLAY AGAIN"

[node name="QuitButton2" type="Button" parent="GameOverPanel/VBox"]
layout_mode = 2
text = "QUIT"

[connection signal="pressed" from="HUD/QuitGameButton" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="StartPanel/VBox/StartButton" to="." method="_on_start_pressed"]
[connection signal="pressed" from="StartPanel/VBox/QuitButton" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="GameOverPanel/VBox/RestartButton" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="GameOverPanel/VBox/QuitButton2" to="." method="_on_quit_pressed"]
